--- a/src/Dews/Dews.css
+++ b/src/Dews/Dews.css
@@ -125,3 +125,37 @@
   color: #333333; /* Set paragraph color */
   font-size: 14px; /* Set font size */
 }
+.context {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 100px;
+}
+.left-section {
+  
+  flex: 1;
+  padding: 20px;
+}
+
+.right-section {
+  flex: 1;
+  padding: 20px;
+}
+
+.right-section img {
+  max-width: 100%;
+  height: auto;}
+.blue-button {
+    background-color: #007bff;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    transition: background-color 0.3s ease;
+  }
+  
+  .blue-button:hover {
+    background-color: #0056b3;
+  }
